blog/k8s/placeholder-ingress.yaml
# Copyright 2024 Robert Cronin
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: "httpbin.example.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
# apiVersion: networking.istio.io/v1
# kind: VirtualService
# metadata:
#   name: placeholder-webpage
# spec:
#   hosts:
#     - robertcronin.com
#   gateways:
#     - placeholder-webpage-gateway
#   http:
#     - route:
#         - destination:
#             host: placeholder-webpage
#             port:
#               number: 80
