blog/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-robertcronin-com
  namespace: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-robertcronin-com
  template:
    metadata:
      labels:
        app: blog-robertcronin-com
    spec:
      containers:
      - name: robertcronin-com
        image: robertcronin/robertcronin.com:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blog-robertcronin-com
  namespace: blog
spec:
  selector:
    app: blog-robertcronin-com
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-robertcronin-com
  namespace: blog
spec:
  ingressClassName: istio
  rules:
  - host: blog.robertcronin.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: blog-robertcronin-com
            port:
              number: 80
  # tls:
  # - hosts:
  #   - blog.robertcronin.com
  #   secretName: blog-robertcronin-com-tls
